@@ -414,7 +414,6 @@
                                 <li class="collection-item">
                                         <div class="row" style="margin-bottom: 0;">
                                                 <div class="col s8"><h5>Heatmap base color:</h5></div>
-                                                <!-- <input type="text" id="paramLowColor" style="margin-bottom: 0;">-->
                                                 <div class="col s1"><input type="color" value="#ffeda0" style="margin-top: 6px;" id="paramLowColor"></div>
                                                 <div class="col s2"><a class="btn waves-effect waves-light" onclick="resetColorCode(0);">Default</a></div>
                                                 <div class="col s1"><a class="btn-floating waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Color of the undepleted end of the heatmap gradient."><i>?</i></a></div>
@@ -532,7 +531,7 @@
         </div>
         
         <div id="popImportDialog" class="modal modal-fixed-footer" style="max-width: 80%; width: 80%; max-height: 90%; height: 90% !important;">
-                <div class="modal-content">
+                <div class="modal-content" id="importDialogContent">
                         <h4>Import Population Data</h4>
                         <div class="row" style="margin-bottom: 8px;">
                                 There are three types of supported file formats from which population data can be imported: simulation save files, and two forms of CSV files.
@@ -597,14 +596,15 @@
                                         <div class="collapsible-body" style="padding: 16px;">
                                         <div class="row" style="margin-bottom: 8px;">Importing from a save file will take the populations from the file without loading any other parameters from the file. This can be used to pull the populations out of multiple saved simulations to combine them into a single new simulation.</div>
                                         <div class="row" style="margin-bottom: 4px;">
-                                                <b>Note:</b> Loading both the parameters and the populations from a save file is done from the <b>Get Started</b> page.
+                                                <b>Note:</b> Loading both the parameters and the populations from a save file is done from the <i>Get Started</i> page.
                                         </div>
                                         </div>
                                 </li>
                         </ul>
+                        <input id="loadPopFileButton" type="file" onchange='loadPopsFromFile(this)' style="display: none;">
                 </div>
                 <div class="modal-footer">
-                        <a href="#!" class="waves-effect waves-red btn blue left" onclick="" style="margin-left: 18px; margin-right: 16px;" id="importDiagSelectFile">Import</a>
+                        <a href="#!" class="waves-effect waves-red btn blue left" onclick="" style="margin-left: 18px; margin-right: 16px;" id="importDiagSelectFile" onclick="document.getElementById('loadPopFileButton').click();">Import</a>
                         <p class="left" style="margin-top: 12px;">
                                 <input type="checkbox" id="duplicateCheckToggle"/>
                                 <label for="duplicateCheckToggle">Check for Duplicates</label>
