@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# manifest v20
+# manifest v21
 
 CACHE:
 index.html
